modified time scales for animations

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -85,14 +85,14 @@
     <!-- endinject -->
 
     <!-- inject:js -->
-    <script src="app/blocks/logger/logger.module.js"></script>
-    <script src="app/blocks/logger/promise-logger.service.js"></script>
-    <script src="app/blocks/logger/logger.service.js"></script>
-    <script src="app/blocks/logger/logger.constants.js"></script>
     <script src="app/blocks/exception/exception.module.js"></script>
     <script src="app/blocks/exception/exception.service.js"></script>
     <script src="app/blocks/exception/exception.const.js"></script>
     <script src="app/blocks/exception/exception-handler.provider.js"></script>
+    <script src="app/blocks/logger/logger.module.js"></script>
+    <script src="app/blocks/logger/promise-logger.service.js"></script>
+    <script src="app/blocks/logger/logger.service.js"></script>
+    <script src="app/blocks/logger/logger.constants.js"></script>
     <script src="app/widgets/widgets.module.js"></script>
     <script src="app/widgets/widgets.constants.js"></script>
     <script src="app/widgets/ngPlaceholder.directive.js"></script>
@@ -120,6 +120,7 @@
     <script src="app/+projects/projects.route.js"></script>
     <script src="app/+projects/projects.controller.js"></script>
     <script src="app/+projects/card.directive.js"></script>
+    <script src="app/+projects/card.class.js"></script>
     <script src="app/app.module.js"></script>
     <!-- endinject -->
   </body>
