--- a/client/src/index.html
+++ b/client/src/index.html
@@ -36,8 +36,9 @@
       <link rel="stylesheet" href="css/normalize.css">
       <link rel="stylesheet" href="css/pattern-4.css">
       <link rel="stylesheet" href="css/styles.css">
-      <link rel="stylesheet" href="css/+projects/card.css">
       <link rel="stylesheet" href="css/+login/login.css">
+      <link rel="stylesheet" href="css/+projects/card.css">
+      <link rel="stylesheet" href="css/+projects/projects.css">
       <link rel="stylesheet" href="css/widgets/actionButton.css">
       <link rel="stylesheet" href="css/widgets/fillheight.css">
       <link rel="stylesheet" href="css/widgets/footer.css">
