--- a/client/src/index.html
+++ b/client/src/index.html
@@ -185,20 +185,23 @@
       </div>
       <!-- /cards -->
 
-      <div class="name-plate-spacer"></div>
-
       <div class="row">
         <div class="col s12 center-align">
+          <div class="name-plate-spacer"></div>
           <h3 class="name-plate condensed-header">Mathew Kleppin</h3>
         </div>
       </div>
 
       <div class="row center-align">
         <div class="col s3 offset-s3">
-          <a href="https://github.com/hellsan631/">Github</a>
+          <a href="https://github.com/hellsan631/">
+            <i class="fa fa-github fa-2x" aria-hidden="true"></i>
+          </a>
         </div>
         <div class="col s3">
-          <a href="https://www.linkedin.com/in/mathew-kleppin-b1432664">LinkedIn</a>
+          <a href="https://www.linkedin.com/in/mathew-kleppin-b1432664">
+            <i class="fa fa-linkedin fa-2x" aria-hidden="true"></i>
+          </a>
         </div>
       </div>
       
@@ -209,10 +212,11 @@
   <script src="vendor/gsap/src/minified/TweenMax.min.js"></script>
   <script src="vendor/gsap/src/minified/plugins/ScrollToPlugin.min.js"></script>
   <script src="vendor/cash/dist/cash.js"></script>
+  <script src="vendor/trianglify/dist/trianglify.min.js"></script>
   <!-- endinject -->
 
   <!-- inject:js -->
-  <script src="app/trianglify.min.js"></script>
+  <script src="app/core/lb-services.js"></script>
   <script src="app/demo-4.js"></script>
   <script src="app/Card-polygon-4.js"></script>
   <!-- endinject -->
