adjust some animation effects

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -75,8 +75,12 @@
       <div class="wrapper card-wrapper">
         <div class="card">
           <div class="card__container card__container--closed">
-            <svg class="card__image" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 1920 1200"
-              preserveAspectRatio="xMidYMid slice">
+            <svg class="card__image" 
+              xmlns="http://www.w3.org/2000/svg" 
+              xmlns:xlink="http://www.w3.org/1999/xlink" 
+              viewBox="0 0 1920 1200"
+              preserveAspectRatio="xMidYMid slice"
+            >
               <defs>
                 <clipPath id="clipPath1">
                   <polygon class="clip" points="0,1200 0,0 1920,0 1920,1200"></polygon>
