--- a/client/src/index.html
+++ b/client/src/index.html
@@ -42,6 +42,9 @@
       <!-- trianglify pattern container -->
       <div class="pattern pattern--hidden"></div>
 
+      <div class="noise">
+      </div>
+
       <div class="credits top hide-on-large-and-up">
         <div class="row">
           <div class="col s12 center-align">
