--- a/client/src/index.html
+++ b/client/src/index.html
@@ -148,7 +148,7 @@
                     <img src="img/magnises_imac_events.jpg" class="responsive-img" />
                   </p>
                   <p>
-                    Because of the success of my previous design work for the dashboard, I was allowed to take the lead the design for this. We have a great marketing team at magnises, so my focus was to empower their fantastic imagery and focus on complementing it the best I could. I ended up doing some cool things with styles, pulling colors from our image and applying them to the various button/icon styles. This is done dynamically for each event and the above image shows shows it worked out really well. 
+                    Because of the success of my previous design work for the dashboard, I was allowed to take the lead the design for this. We have a great marketing team at magnises, so my focus was to empower their fantastic imagery and focus on complementing it the best I could. I ended up doing some cool things with styles, pulling colors from our image and applying them to the various button/icon styles. This is done dynamically for each event and the above image shows how it worked out.
                   </p>
                 </div>
               </div>
