--- a/client/src/index.html
+++ b/client/src/index.html
@@ -223,7 +223,7 @@
                 </div>
                 <div class="flow-text">
                   <p>
-                    Pretext
+                    Not yet done writing this one!
                   </p>
                   <p>
                     
