patch some grammer

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -186,7 +186,7 @@
                     I started off at TargetProof as a contractor in 2012, during my freelance days. I built a CMS from a set of design template, then transitioned quickly into doing branding work. The company was in need for a solid brand identity to show off to investors, and I had the expertise that allowed me to do various odd-jobs. From product videos built in Adobe After-Effects, to a unifying style guide, most of everything got my designers touch.
                   </p>
                   <p>
-                    The goal of the company was to develop a P2P identity assertion solution, using the already existing Open-PGP standard. Open-PGP is great for its cryptography, but has been slow on the update because its key management isn't user-friendly. Our goal was to build an infrastructure to take care of key management in the back-end for users and start developing a web-of-trust, sharing keys via P2P, storing these connections on our cloud server.
+                    The goal of the company was to develop a P2P identity assertion solution, using the already existing Open-PGP standard. Open-PGP is great for its cryptography, but has been slow on the uptake because its key management isn't user-friendly. Our goal was to build an infrastructure to take care of key management in the back-end for users and start developing a web-of-trust, sharing keys via P2P, storing these connections on our cloud server.
                   </p>
                   <p>
                     <img src="img/targetproof_mockup.jpg" alt="TargetProof email auditing tool, Mirror" class="responsive-img" />
@@ -198,13 +198,13 @@
                     I didn't quite know what I was signing up for. The complexities of email-security, and the lack of availability of community modules to cover our use case meant a lot of our infrastructure had to be created by hand, by someone who had expert level knowledge of DNS structures surrounding email servers.
                   </p>
                   <p>
-                    It took about 8 months to finish the prototype. After lots of research and re-writing a mail-server the report was finally finished. The first version had a simplified UI which toned down the technical data and engineering speak, but required users to send an email to analyze. It also included some basic risk tracking and tracked how well you fared vs other users who had gone through the system.
+                    It took about 8 months to finish the prototype. After lots of research, and re-writing a mail-server, the report was finally finished. The first version had a simplified UI which toned down the technical data and engineering jargon. It required users to send an email to our domain to analyze. It also included some basic risk tracking and other analytics on how well you fared vs other users who had gone through the system.
                   </p>
                   <p>
-                    Building on the technical success that was our first version of Mirror, I worked on removing the email requirement. A lot of the information about a mail-server can be taken from just an email address. We were requiring an email so we could gather a lot of the surrounding DNS info from the actual email message header itself. This was our biggest hurdle to get users in the system, having users email our Mirror program.
+                    Building on the technical success that was our first version of Mirror, I worked on removing the email requirement. A lot of the information about a mail-server can be taken from just an email address. We were requiring an actual email message so we could gather the surrounding DNS info from the message header itself. This was our biggest hurdle to get users in the system, having users email our Mirror program.
                   </p>
                   <p>
-                    Several hundred tests and a complete re-write to our API, we now have Mirror v2, which only requires a single domain to fetch information about it. This allows us greater flexibility in creating future monitoring tools for companies. Not to mention a big increase in our on-boarding capabilities.
+                    Several hundred tests and a complete re-write to our API, we now have Mirror v2, which only requires a single domain to fetch information about it. This allows us greater flexibility in creating future monitoring tools for companies. Also, there was a big increase in our on-boarding capabilities.
                   </p>
                 </article>
               </div>
