--- a/client/src/index.html
+++ b/client/src/index.html
@@ -235,10 +235,10 @@
                 </div>
                 <article class="flow-text">
                   <p>
-                    Not yet done writing this one!
+                    A lot of my experience with app's comes from the work I did at Acapella. I was brought on offically as a consultant for one of their larger clients, who was developing a traveling "experience" phone app. As the relationship grew, I got exposed to a lot of new technologies, like real-time streaming and augmented reality applications.
                   </p>
                   <p>
-                    
+                    The first application I worked on, called Buzztep, was designed to be a social travel experience app. Users would launch the app and it would track them during their travels, create photo collages, and suggest places to eat. My job was to design the data archatecture that would support various complex relations, and come up with a tech stack that could impliment the archatecture as well. 
                   </p>
                 </article>
               </div>
