--- a/client/src/index.html
+++ b/client/src/index.html
@@ -102,7 +102,7 @@
                   <span class="meta__author">
                     <a href="https://www.magnises.com/">https://magnises.com</a>
                   </span>
-                  <span class="meta__date">Dec 2015 - Present</span>
+                  <span class="meta__date">Dec 2015 - May 2017</span>
                 </div>
                 <article class="flow-text">
                   <p>
